# design-patterns-for-c

./: README.md
AbstractDocument/: CMakeLists.txt
AbstractFactory/: CMakeLists.txt  main.c
AbstractFactory/inc/: AbstractFactory.h
AbstractFactory/src/: AbstractFactory.c
Adapter/: Adapter.puml  CMakeLists.txt  README.md  main.c
Adapter/inc/: Adapter.h
Adapter/src/: Adapter.c
Builder/: CMakeLists.txt  README.md  main.c
Builder/inc/: Builder.h
Builder/src/: Builder.c
ChainOfResponsibility/: CMakeLists.txt  Chain_of_Responsibility.puml  README.md  main.c
ChainOfResponsibility/inc/: Chain.h
ChainOfResponsibility/src/: Chain.c
Command/: CMakeLists.txt  Command.puml  README.md  main.c
Command/LinkedList/: LinkedList.c  (+1 more)
Composite/: CMakeLists.txt  Composite.puml  README.md  main.c
FactoryMethod/: CMakeLists.txt  main.c
Flyweight/: CMakeLists.txt  Flyweight.puml  README.md  main.c
Iterator/: CMakeLists.txt  Iterator.h  Iterator.puml  README.md  main.c
Iterator/List/: Item.c  Item.h  TreasureChest.c  TreasureChest.h  TreasureChestItemIterator.c  TreasureChestItemIterator.h
Iterator/List/inc/: ArrayList.h
Iterator/List/src/: ArrayList.c
Iterator/inc/: Iterator.h
Iterator/src/: Iterator.c
Mediator/: CMakeLists.txt  Mediator.puml  README.md  main.c
Memento/: CMakeLists.txt  README.md  main.c  memento.puml
Prototype/: CMakeLists.txt  README.md  main.c  prototype.puml
Singleton/: CMakeLists.txt  README.md  Singleton.puml  main.c
State/: CMakeLists.txt  OOPSupport.h  README.md  main.c  state.puml
Visitor/: CMakeLists.txt  README.md
(+31 files in other folders)
